# evalforge

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: __init__.py  app.py  evalforge_environment.py  requirements.txt
